--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -18,5 +18,7 @@
     <string name="enter_your_email">Adja meg e-mail-címét a fogadott visszaállítási hivatkozáshoz.</string>
     <string name="reset_dialog_yes">Igen</string>
     <string name="reset_link_sent">Az e-mailre küldött hivatkozás visszaállításaEmail</string>
+    <string name="reset_link_not_sent">Hiba: A hivatkozás visszaállítása nem lett elküldveent</string>
+
     <string name="reset_dialog_cancel">Mégse</string>
 </resources>
