--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="reset_link_sent">Reset Link Sent To Your Email</string>
     <string name="reset_link_not_sent">Error: Reset Link Is Not Sent</string>
     <string name="reset_dialog_cancel">Cancel</string>
+    <string name="select_user">Select User</string>
+    <string name="unable_update_token">Unable update token</string>
+    <string name="no_user_available">No user available</string>
 </resources>
