--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -24,4 +24,5 @@
     <string name="select_user">A Felhasználó kiválasztása</string>
     <string name="unable_update_token">Nem sikerült frissíteni a tokent</string>
     <string name="no_user_available">No user available</string>
+    <string name="type_message">Type message</string>
 </resources>
