--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="select_user">Select User</string>
     <string name="unable_update_token">Unable update token</string>
     <string name="no_user_available">No user available</string>
+    <string name="type_message">Type message</string>
 </resources>
